--- a/css/index.css
+++ b/css/index.css
@@ -106,6 +106,18 @@
   font-size: 0.85em;
   margin-bottom: 10px;
 }
+.five {
+  position: absolute;
+  height: 20px;
+  width:90%;
+  margin-left: 5%;
+  background-image: url('../img/rokovoko.png');
+  font-size: 0.85em;
+  margin-bottom: 10px;
+  bottom:0px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
 
 /********************************/
 /************* RIGHT ************/
@@ -211,12 +223,14 @@
 }
 
 .title {
+  font-family: arial, sans-serif;
   position: absolute;
   right: 0;
   width: 190px;
   text-align: center;
   font-size: 0.9em;
   padding-top: 6px;
+  top: 80px;
 }
 
 /*********************************/
@@ -330,6 +344,10 @@
   width: 80px;
 }
 
+.selected ul li span.auto {
+  font-family: arial, sans-serif;
+}
+
 .selected ul li.logo-fiche div {
   height: 80px;
   width: 100%;
@@ -394,6 +412,7 @@
 .right-fiche div:last-child {
   font-size: 0.7em;
   margin-top: 5px;
+  font-family: arial, sans-serif;
 }
 
 footer {
@@ -433,6 +452,6 @@ footer .date {
   position: relative !important;
   top: -3px !important;
   color: rgba(36,45,59,0.5);
-  font-family: 'antonio-light';
+  font-family: arial, sans-serif;
   display: none;
 }
