--- a/css/index.css
+++ b/css/index.css
@@ -80,7 +80,7 @@
 }
 
 .zero img {
-  width: 80px;
+  width: 70px;
 }
 
 .one {
@@ -211,9 +211,9 @@
   height: 80px;
   cursor: pointer;
   border: 1px solid rgba(36,45,59,0.5);
-  box-shadow: 0 0 1px 0px rgba(36,45,59,0.3) inset, 0 0 1px 0px rgba(36,45,59,0.3);
+  /*box-shadow: 0 0 1px 0px rgba(36,45,59,0.3) inset, 0 0 1px 0px rgba(36,45,59,0.3);*/
   box-sizing: border-box;
-  border-radius: 15px;
+  /*border-radius: 15px;*/
   overflow:hidden;
 }
 
@@ -251,8 +251,12 @@
 }
 
 .selector li img {
-  width: 100%;
-  height:100%;
+  width: 70px;
+  height:70px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -36px 0 0 -36px;
 }
 
 .selector li.current {
@@ -297,12 +301,14 @@
   left: 0;
   width: 80px;
   height: 80px;
-  background-size: contain;
+  background-size: 70px;
+  background-position: 4px 4px;
+  background-color: #fff;
   background-repeat: no-repeat;
   border: 1px solid rgba(36,45,59,0.5);
-  box-shadow: 0 0 1px 0px rgba(36,45,59,0.3) inset, 0 0 1px 0px rgba(36,45,59,0.3);
+  /*box-shadow: 0 0 1px 0px rgba(36,45,59,0.3) inset, 0 0 1px 0px rgba(36,45,59,0.3);*/
   box-sizing: border-box;
-  border-radius: 15px;
+  /*border-radius: 15px;*/
   overflow: hidden;
   cursor: pointer;
 }
