Fix: intruction line hight

--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,12 @@
   padding-top: 20px;
 }*/
 
+.fourbis {
+  margin-top: 15px;
+  font-size: 0.9em;
+  line-height: 1.4em;
+}
+
 .five {
   position: absolute;
   margin-bottom: 10px;
